---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/empty_pattern.nix
+++ tests/data/empty_pattern.nix [fixed]
@@ -1,11 +1,11 @@
 [
   # match
-  ({ ... }: 42)
+  (_: 42)
 
   # don't match
   ({ a, ... }: a)
-  ({ ... } @ inputs: inputs)
+  (inputs: inputs)
 
   # nixos module, don't match
   ({ ... }: {
     imports = [
